initiated leo.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <script src="p5.js"></script>
     <script src="p5.sound.js"></script>
     <!-- <script src="sketch.js"></script> -->
-    <script src="twoDPerlin.js"></script>
+    <!-- <script src="twoDPerlin.js"></script> -->
+    <script src="leo.js"></script>
   </head>
   <body></body>
 </html>
