clock work initialised

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script src="p5.sound.js"></script>
     <!-- <script src="sketch.js"></script> -->
     <!-- <script src="twoDPerlin.js"></script> -->
-    <script src="leo.js"></script>
+    <!-- <script src="leo.js"></script> -->
+    <script src="clockWork.js"></script>
   </head>
   <body></body>
 </html>
