wave clock initiated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <!-- <script src="sketch.js"></script> -->
     <!-- <script src="twoDPerlin.js"></script> -->
     <!-- <script src="leo.js"></script> -->
-    <script src="clockWork.js"></script>
+    <!-- <script src="clockWork.js"></script> -->
+    <script src="waveClock.js"></script>
   </head>
   <body></body>
 </html>
